@@ -1,4 +1,4 @@
-<!-- $Id: mod_cap.html,v 1.4 2009-02-05 22:52:53 castaglia Exp $ -->
+<!-- $Id: mod_cap.html,v 1.5 2009-06-30 16:53:17 castaglia Exp $ -->
 <!-- $Source: /home/proftpd-core/backup/proftp-cvsroot/proftpd/doc/modules/mod_cap.html,v $ -->
 
 <html>
@@ -114,13 +114,16 @@ The <code>CapabilitiesSet</code> directive is used to manipulate the set of
 capabilities that <code>mod_cap</code> grants.
 
 <p>
-By default, <code>mod_cap</code> removes all but two capabilities
+By default, <code>mod_cap</code> removes all but a few capabilities
 from the session-handling process: <code>CAP_NET_BIND_SERVICE</code>, for
 binding to ports lower than 1024 (required for active data transfers), and
 <code>CAP_CHOWN</code>, for allowing a process to change a file's ownership
 to a different user.  The <code>CAP_CHOWN</code> capability is only strictly
 necessary if the <code>UserOwner</code> configuration directive is in use; if
 not being used, the <code>CAP_CHOWN</code> capability is best removed.
+Additionally, <code>CAP_AUDIT_WRITE</code> is retained if
+the <code>mod_auth_pam</code> module is present, as this capability is needed
+for some PAM modules such as <code>pam_loginuid</code>. 
 
 <p>
 To remove a capability, prefix the name with a '-'; to enable a capability,
@@ -191,7 +194,7 @@ you will need to use a configuration such as:
 <p>
 <hr><br>
 Author: <i>$Author: castaglia $</i><br>
-Last Updated: <i>$Date: 2009-02-05 22:52:53 $</i><br>
+Last Updated: <i>$Date: 2009-06-30 16:53:17 $</i><br>
 <br><hr>
 
 <font size=2><b><i>
