@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.1037 2009-06-29 17:18:27 castaglia Exp $
+$Id: NEWS,v 1.1038 2009-06-30 16:53:17 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -118,6 +118,8 @@ CVS
 - Bug 3256 - "SO_OOBINLINE" error occuring again.  This is a regression of
   Bug#2332 caused by code movement in 1.3.2.
 - Bug 3258 - Log cluttered with "using sendfile capability" messages.
+- Bug 3261 - Badly formatted TLSRenegotiate directive causes proftpd to hang.
+- Bug 3257 - CAP_AUDIT_WRITE capability needed for some PAM modules.
 
 1.3.2 - Released 5-Feb-2009
 --------------------------------
